--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "color-name": "^1.1.4",
     "concat-map": "^0.0.1",
     "convert-source-map": "^2.0.0",
+    "cookie-parser": "^1.4.7",
     "cross-spawn": "^7.0.6",
     "csstype": "^3.1.3",
     "debug": "^4.4.1",
